@@ -4,12 +4,14 @@ advscan \(hy History For AdvanceSCAN
 .SH ADVANCESCAN VERSION 1.16 2012/11 
 .PD 0
 .IP \(bu
+Added support for CHD file version 4 and 5.
+.IP \(bu
 Removed zlib.dll. It\(cqs no more required.
 .PD
 .SH ADVANCESCAN VERSION 1.15 2012/11 
 .PD 0
 .IP \(bu
-Fixed sampleof recognition. Now it works with recent MAME versions.
+Fixed sampleof recognition.
 .PD
 .SH ADVANCESCAN VERSION 1.14 2008/12 
 .PD 0
