@@ -9,6 +9,9 @@ AdvanceSCAN Version 1.16 2012/11
 </h2>
 <ul>
 <li>
+Added support for CHD file version 4 and 5.
+</li>
+<li>
 Removed zlib.dll. It's no more required.
 </li>
 </ul>
@@ -17,7 +20,7 @@ AdvanceSCAN Version 1.15 2012/11
 </h2>
 <ul>
 <li>
-Fixed sampleof recognition. Now it works with recent MAME versions.
+Fixed sampleof recognition.
 </li>
 </ul>
 <h2> 
